fix overflow scroll behaviour on table columns

--- a/app/styles/hypertable.less
+++ b/app/styles/hypertable.less
@@ -10,11 +10,16 @@
 }
 
 .hypertable {
-  display: flex;
-  overflow-x: auto;
+  display: inline-grid;
+  grid-auto-flow: column;
+
+  grid-template-areas: 'sticky content';
+  grid-auto-flow: column;
+
   height: 100%;
   scroll-behavior: smooth;
   background-color: white;
+  position: relative;
 }
 
 .hypertable__state {
@@ -75,9 +80,7 @@
 
     background-color: var(--color-gray-100);
 
-    transition:
-      transform 0.3s ease-in-out,
-      opacity 0.3s ease-in-out;
+    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
     transform: translateX(100px);
     opacity: 0;
 
